src/tests/fixtures/preprocessor/errors/error6.cpp
#define boo \
  132151
int foo boo

